--- a/user-activation/translations/es_ES.json
+++ b/user-activation/translations/es_ES.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook verificada",
   "saxnj": "Cuenta verificada de Airbnb",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Enviar mensaje",
   "2gtpRD": "Saldo de la Cuenta",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Comentarios de este vendedor",
   "14DSHP": "Opiniones de este usuario",
   "3tmHza": "Usuario sin nombre",
+  "rkO8B": "Loading More...",
   "48NbPX": "Lee mas",
   "1fBJTw": "Enviar",
   "3KIuu2": "Compraste un listado",
@@ -671,13 +676,18 @@
   "3MWhEl": "Verifique su dirección de correo electrónico",
   "2s3RvZ": "Ingrese el código que le enviamos a continuación",
   "21Ou4S": "¡Correo electrónico verificado!",
-  "o8stt": "Verifica tu cuenta de Facebook",
-  "MAFIO": "Otros usuarios sabrán que tienes una cuenta de Facebook verificada, pero los detalles de tu cuenta no se publicarán en la cadena de bloques. Nunca publicaremos en su nombre.",
-  "GmIoE": "Cuenta de Facebook verificada!",
-  "1T0MVt": "Verifica tu cuenta de Google",
-  "3d1Uto": "Otros usuarios sabrán que tienes una cuenta de Google verificada, pero los detalles de tu cuenta no se publicarán en la blockchain. Nunca publicaremos en su nombre.",
-  "FoBDR": "¡Cuenta de Google verificada!",
   "1ZMsNQ": "¡Éxito!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifica tu numero de telefono",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Ingrese el código que le enviamos a continuación",
   "OxVwu": "Número de teléfono verificado!",
-  "2ocEjm": "Verifica tu cuenta de Twitter",
-  "1pJuAp": "Otros usuarios sabrán que tienes una cuenta de Twitter verificada, pero los detalles de tu cuenta no se publicarán en la cadena de bloques. Nunca publicaremos en su nombre.",
-  "W5qlz": "Cuenta de Twitter verificada!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Sí por favor",
   "1hT9ap": "Enviar",
   "2hXnwD": "Ha escalado este problema a un miembro del equipo de Origin. Serás contactado una vez que se haga una declaración.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Rechazar oferta",
   "1xeJpw": "¿Seguro que quieres rechazar esta oferta? Los fondos de los compradores serán devueltos a ellos.",
   "1YzGWd": "Rechazar",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter actualizado",
   "3GeDLO": "Airbnb actualizado",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Bienvenido a Origin Protocol",
   "3CyhBi": "Edite su perfil",
   "lJvsj": "Usuario de Origin sin descripción",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Publicar Ahora",
   "edtCZ": "{=Verifying your profile} permite a otros usuarios saber que usted es una persona real y aumenta las posibilidades de transacciones exitosas en Origin.",
   "3xBWtA": "Verificando su Perfil",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Información Verificada",
   "4Bj3zk": "Correo Electrónico",
   "XtTi2": "Teléfono",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Usuario sin nombre",
   "1lg0ty": "Sin descripción"
 }
