--- a/user-activation/translations/fil_PH.json
+++ b/user-activation/translations/fil_PH.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Na-verify na Facebook",
   "saxnj": "Na-verify ang Airbnb Account",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Magpadala ng Mensahe",
   "2gtpRD": "Balanse sa Account",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Mga review ng nagbebenta na ito",
   "14DSHP": "Mga review ng user na ito",
   "3tmHza": "Walang pangalang user",
+  "rkO8B": "Loading More...",
   "48NbPX": "Magbasa pa",
   "1fBJTw": "Ipadala",
   "3KIuu2": "Nagbili ka ng isang listahan",
@@ -671,13 +676,18 @@
   "3MWhEl": "I-verify ang iyong email address",
   "2s3RvZ": "Ipasok ang code na ipinadala namin sa iyo sa ibaba",
   "21Ou4S": "Nakumpirma ang email address!",
-  "o8stt": "I-verify ang iyong Facebook Account",
-  "MAFIO": "Alam ng iba pang mga gumagamit na mayroon kang isang na-verify na Facebook account, ngunit hindi mai-publish ang mga detalye ng iyong account sa blockchain. Hindi kami magpapaskil para sa iyo.",
-  "GmIoE": "Na-verify ang Facebook account!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "I-verify ang iyong numero ng telepono",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Ipasok ang code na ipinadala namin sa iyo sa ibaba",
   "OxVwu": "Na-verify ang numero ng telepono!",
-  "2ocEjm": "I-verify ang iyong Twitter Account",
-  "1pJuAp": "Malalaman ng iba pang mga gumagamit na mayroon kang isang na-verify na Twitter account, ngunit hindi mai-publish ang mga detalye ng iyong account sa blockchain. Hindi kami magpapaskil para sa iyo.",
-  "W5qlz": "Napatunayan ang Twitter account!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Oo, pakiusap",
   "1hT9ap": "Isumite",
   "2hXnwD": "Naitaguyod mo ang isyung ito sa isang miyembro ng Pinagmulan ng koponan. Makikipag-ugnay ka kapag isang desicion ang ginawa.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Tanggihan ang Alok",
   "1xeJpw": "Sigurado ka bang gusto mong tanggihan ang alok na ito? Ang mga pondo ng mamimili ay ibabalik sa kanila.",
   "1YzGWd": "Tanggihan",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Maligayang pagdating sa Pinagmulang Protocol",
   "3CyhBi": "I-edit ang iyong profile",
   "lJvsj": "Isang user ng Origin na walang deskripsyon",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "I-publish na ngayon",
   "edtCZ": "{=Verifying your profile} nagbibigay-daan sa iba pang mga gumagamit na malaman na ikaw ay isang tunay na tao at pinatataas ang mga pagkakataon ng matagumpay na mga transaksyon sa Pinagmulan.",
   "3xBWtA": "Pagtiyak kung tama ang iyong profile",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Berepikadong impormasyon",
   "4Bj3zk": "Email",
   "XtTi2": "Telepono",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Walang pangalang user",
   "1lg0ty": "walang paglalarawan"
 }
