--- a/user-activation/translations/fr_FR.json
+++ b/user-activation/translations/fr_FR.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook vérifié",
   "saxnj": "Compte Airbnb vérifié",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Envoyer le message",
   "2gtpRD": "Solde du compte",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Commentaire sur ce vendeur",
   "14DSHP": "Commentaires sur cet utilisateur",
   "3tmHza": "Utilisateur Inconnu",
+  "rkO8B": "Loading More...",
   "48NbPX": "En savoir plus",
   "1fBJTw": "Envoyer",
   "3KIuu2": "Vous avez acheté une annonce",
@@ -671,13 +676,18 @@
   "3MWhEl": "Vérifiez votre adresse e-mail",
   "2s3RvZ": "Entrez le code que nous vous avons envoyé ci-dessous",
   "21Ou4S": "Adresse e-mail vérifiée!",
-  "o8stt": "Vérifiez votre compte Facebook",
-  "MAFIO": "Les autres utilisateurs sauront que vous avez un compte Facebook vérifié, mais les détails de votre compte ne seront pas publiés sur la blockchain. Nous ne publierons jamais en votre nom.",
-  "GmIoE": "Compte Facebook vérifié!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Vérifiez votre numéro de téléphone",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Entrez le code que nous vous avons envoyé ci-dessous",
   "OxVwu": "Numéro de téléphone vérifié!",
-  "2ocEjm": "Vérifiez votre compte Twitter",
-  "1pJuAp": "Les autres utilisateurs sauront que vous avez un compte Twitter vérifié, mais les détails de votre compte ne seront pas publiés sur la blockchain. Nous ne publierons jamais en votre nom.",
-  "W5qlz": "Compte Twitter vérifié!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Oui s'il vous plaît",
   "1hT9ap": "Soumettre",
   "2hXnwD": "Vous avez transmis ce problème à un membre de l'équipe Origin. Vous serez contacté une fois qu'une description est faite.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Rejeter l'offre",
   "1xeJpw": "Êtes-vous sûr de vouloir refuser cette offre? Les fonds des acheteurs leur seront rendus.",
   "1YzGWd": "Rejeter",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Bienvenue sur Origin Protocol",
   "3CyhBi": "Modifier votre profil",
   "lJvsj": "Un utilisateur Origin sans description",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Publier maintenant",
   "edtCZ": "{=Verifying your profile} permet aux autres utilisateurs de savoir que vous êtes une personne réelle et augmente les chances de réussite des transactions sur Origin.",
   "3xBWtA": "Vérifier votre profil",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Info vérifiée",
   "4Bj3zk": "Email",
   "XtTi2": "Téléphone",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Utilisateur Inconnu",
   "1lg0ty": "Pas de description"
 }
