--- a/user-activation/translations/hr_HR.json
+++ b/user-activation/translations/hr_HR.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook je potvrđen",
   "saxnj": "Airbnb račun je potvrđen",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Pošalji poruku",
   "2gtpRD": "Stanje na računu",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Recenzije ovog prodavatelja",
   "14DSHP": "Recenzije ovog korisnika",
   "3tmHza": "Korisnik bez naziva",
+  "rkO8B": "Loading More...",
   "48NbPX": "Čitaj više",
   "1fBJTw": "Poslati",
   "3KIuu2": "Kupili ste unos",
@@ -671,13 +676,18 @@
   "3MWhEl": "Potvrdite svoju email adresu",
   "2s3RvZ": "Unesite kôd koji smo vam poslali u nastavku",
   "21Ou4S": "Adresa e-pošte potvrđena!",
-  "o8stt": "Potvrdite svoj Facebook račun",
-  "MAFIO": "Drugi će korisnici znati da imate potvrđeni Facebook račun, ali detalji vašeg računa neće biti objavljeni na blockchainu. Nikada nećemo objavljivati u vaše ime.",
-  "GmIoE": "Facebook račun potvrđen!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Potvrdite svoj telefonski broj",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Unesite kôd koji smo vam poslali u nastavku",
   "OxVwu": "Telefonski broj potvrđen!",
-  "2ocEjm": "Potvrdite svoj Twitter račun",
-  "1pJuAp": "Drugi će korisnici znati da imate potvrđeni Twitter račun, ali detalji vašeg računa neće biti objavljeni na blockchainu. Nikada nećemo objavljivati u vaše ime.",
-  "W5qlz": "Twitter račun potvrđen!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Da molim",
   "1hT9ap": "podnijeti",
   "2hXnwD": "Izdali ste pitanje članu Origin tima. Bit ćete kontaktirani nakon što se donese odluka.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Odbiti ponudu",
   "1xeJpw": "Jeste li sigurni da želite odbiti ovu ponudu? Sredstva kupaca bit će vraćena njima.",
   "1YzGWd": "Odbiti",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Dobro došli u Protokol o podrijetlu",
   "3CyhBi": "uredi svoj profil",
   "lJvsj": "Korisnik izvora bez opisa",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Objavi odmah",
   "edtCZ": "{=Verifying your profile} dopušta drugim korisnicima da znaju da ste stvarna osoba i povećavaju šanse za uspješne transakcije na Origin.",
   "3xBWtA": "Provjera vašeg profila",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Potvrđene informacije",
   "4Bj3zk": "E-mail",
   "XtTi2": "Telefon",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Korisnik bez naziva",
   "1lg0ty": "bez opisa"
 }
