--- a/user-activation/translations/id_ID.json
+++ b/user-activation/translations/id_ID.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook Diverifikasi",
   "saxnj": "Akun Airbnb Terverifikasi",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Mengirim pesan",
   "2gtpRD": "Saldo Akun",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Ulasan dari penjual ini",
   "14DSHP": "Ulasan pengguna ini",
   "3tmHza": "Pengguna tanpa nama",
+  "rkO8B": "Loading More...",
   "48NbPX": "Baca lebih lajut",
   "1fBJTw": "Kirim",
   "3KIuu2": "Anda membeli daftar",
@@ -671,13 +676,18 @@
   "3MWhEl": "Verifikasi alamat email Anda",
   "2s3RvZ": "Masukkan kode yang kami kirimkan kepada Anda di bawah ini",
   "21Ou4S": "Alamat email terverifikasi!",
-  "o8stt": "Verifikasi Akun Facebook Anda",
-  "MAFIO": "Pengguna lain akan tahu bahwa Anda memiliki akun Facebook terverifikasi, tetapi detail akun Anda tidak akan dipublikasikan di blockchain. Kami tidak akan pernah memposting atas nama Anda.",
-  "GmIoE": "Akun Facebook diverifikasi!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifikasi Nomor Telepon Anda",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Masukkan kode yang kami kirimkan kepada Anda di bawah ini",
   "OxVwu": "Nomor telepon terverifikasi!",
-  "2ocEjm": "Verifikasi Akun Twitter Anda",
-  "1pJuAp": "Pengguna lain akan tahu bahwa Anda memiliki akun Twitter terverifikasi, tetapi detail akun Anda tidak akan dipublikasikan di blockchain. Kami tidak akan pernah memposting atas nama Anda.",
-  "W5qlz": "Akun Twitter diverifikasi!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Ya silahkan",
   "1hT9ap": "Kirim",
   "2hXnwD": "Anda telah meningkatkan masalah ini ke anggota tim Asal. Anda akan dihubungi begitu suatu keputusan dibuat.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Tolak Penawaran",
   "1xeJpw": "Anda yakin ingin menolak penawaran ini? Dana pembeli akan dikembalikan kepada mereka.",
   "1YzGWd": "Menolak",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Selamat datang di Protokol Asal",
   "3CyhBi": "sunting profilmu",
   "lJvsj": "Pengguna Origin tanpa deskripsi",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Publikasi Sekarang",
   "edtCZ": "{=Verifying your profile} memungkinkan pengguna lain untuk mengetahui bahwa Anda adalah orang yang nyata dan meningkatkan peluang transaksi yang sukses di Origin.",
   "3xBWtA": "Verifikasi profil anda",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Info terverifikasi",
   "4Bj3zk": "Email",
   "XtTi2": "Telepon",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Pengguna tanpa nama",
   "1lg0ty": "tidak ada deskripsi"
 }
