--- a/user-activation/translations/it_IT.json
+++ b/user-activation/translations/it_IT.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook verificato",
   "saxnj": "Airbnb account verificato",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Invia messaggio",
   "2gtpRD": "Saldo del conto",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Recensioni di questo venditore",
   "14DSHP": "Recensioni di questo utente",
   "3tmHza": "Utente senza nome",
+  "rkO8B": "Loading More...",
   "48NbPX": "Leggi di più",
   "1fBJTw": "Invia",
   "3KIuu2": "Hai acquistato un annuncio",
@@ -671,13 +676,18 @@
   "3MWhEl": "Verifica il tuo indirizzo Email",
   "2s3RvZ": "Inserisci il codice che ti abbiamo inviato qui sotto",
   "21Ou4S": "Indirizzo email verificato!",
-  "o8stt": "Verifica il tuo Account di Facebook",
-  "MAFIO": "Gli altri utenti sapranno che hai un account Facebook verificato, ma i dettagli del tuo account non saranno pubblicati sulla blockchain. Non pubblicheremo mai a tuo nome.",
-  "GmIoE": "Account Facebook verificato!",
-  "1T0MVt": "Verifica il tuo Account Google",
-  "3d1Uto": "Gli altri utenti sapranno che hai un account Google verificato, ma i dettagli del tuo account non saranno pubblicati sulla blockchain. Non pubblicheremo mai a tuo nome.",
-  "FoBDR": "Account Google verificato!",
   "1ZMsNQ": "Successo!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifica il tuo Numero di Telefono",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Inserisci il codice che ti abbiamo inviato qui sotto",
   "OxVwu": "Numero di telefono verificato!",
-  "2ocEjm": "Verifica il tuo Account Twitter",
-  "1pJuAp": "Gli altri utenti sapranno che hai un account Twitter verificato, ma i dettagli del tuo account non saranno pubblicati sulla blockchain. Non pubblicheremo mai a tuo nome.",
-  "W5qlz": "Account Twitter verificato!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Sì grazie",
   "1hT9ap": "Invia",
   "2hXnwD": "Hai inoltrato questo problema a un membro del team Origin. Sarai contattato una volta che sarà stata formulata una richiesta.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Respingere l'offerta",
   "1xeJpw": "Sei sicuro di voler rifiutare questa offerta? I fondi dei compratori saranno restituiti a loro.",
   "1YzGWd": "Rifiuta",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter aggiornato",
   "3GeDLO": "Airbnb aggiornato",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Benvenuto in Origin Protocol",
   "3CyhBi": "modifica il tuo profilo",
   "lJvsj": "Un utente Origin senza descrizione",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Pubblica Ora",
   "edtCZ": "{=Verifying your profile} consente ad altri utenti di sapere che sei una persona reale e aumenta le possibilità di transazioni di successo su Origin.",
   "3xBWtA": "Verificando il tuo profilo",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Informazioni verificate",
   "4Bj3zk": "Posta elettronica",
   "XtTi2": "Telefono",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Utente senza nome",
   "1lg0ty": "Nessuna descrizione"
 }
