--- a/user-activation/translations/ja_JP.json
+++ b/user-activation/translations/ja_JP.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebookのアカウントの認証を完了しました",
   "saxnj": "Airbnb のアカウントの認証が完了しました",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "メッセージを送る",
   "2gtpRD": "残高",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "販売者のレビュー",
   "14DSHP": "ユーザーのレビュー",
   "3tmHza": "名前の無いユーザー",
+  "rkO8B": "Loading More...",
   "48NbPX": "詳細について",
   "1fBJTw": "送信",
   "3KIuu2": "出品されていた物を購入しました",
@@ -671,13 +676,18 @@
   "3MWhEl": "あなたのメールアドレスを確認してください",
   "2s3RvZ": "以下に送信したコードを入力してください",
   "21Ou4S": "メールアドレスを確認しました。",
-  "o8stt": "あなたのFacebookアカウントを確認する",
-  "MAFIO": "他のユーザーは、あなたが確認済みのFacebookアカウントを持っていることを知っていますが、あなたのアカウントの詳細はブロックチェーンに公開されません。私たちはあなたに代わって投稿することは決してありません。",
-  "GmIoE": "Facebookアカウントを確認しました。",
-  "1T0MVt": "あなたのGoogleアカウントを認証する",
-  "3d1Uto": "他のユーザーからは、あなたが承認済みのGoogleアカウントを持っている事がわかります。ですが、あなたのアカウントの詳細は公開されません。また、私たちがあなたに代わって投稿することは決してありません。",
-  "FoBDR": "Googleアカウントの認証が完了しました!",
   "1ZMsNQ": "成功!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "あなたの電話番号を確認する",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "以下に送信したコードを入力してください",
   "OxVwu": "電話番号を確認しました。",
-  "2ocEjm": "あなたのTwitterアカウントを確認する",
-  "1pJuAp": "他のユーザーは、あなたが確認済みのTwitterアカウントを持っていることを知っていますが、あなたのアカウントの詳細はブロックチェーンに公開されません。私たちはあなたに代わって投稿することは決してありません。",
-  "W5qlz": "Twitterアカウントを確認しました。",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "はい、お願いします",
   "1hT9ap": "送信",
   "2hXnwD": "あなたはこの問題をOriginのチームメンバーにエスカレートしました。乾燥がなされたらあなたは連絡されるでしょう。",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "申し出を拒絶する",
   "1xeJpw": "このオファーを拒否してもよろしいですか？買い手の資金は彼らに返却されます。",
   "1YzGWd": "拒否",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Originプロトコルへようこそ",
   "3CyhBi": "あなたのプロフィールを編集する",
   "lJvsj": "Originユーザー（備考の記載なし）",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "今すぐ公開",
   "edtCZ": "{=Verifying your profile} 指定すると、他のユーザーはあなたが本物の人物であることを知ることができ、Origin上でトランザクションが成功する可能性が高まります。",
   "3xBWtA": "あなたのプロフィールを確認中です",
@@ -1093,6 +1110,8 @@
   "4oX20t": "認証済みの情報",
   "4Bj3zk": "Eメール",
   "XtTi2": "電話",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "名前の無いユーザー",
   "1lg0ty": "説明なし"
 }
