--- a/user-activation/translations/ko_KR.json
+++ b/user-activation/translations/ko_KR.json
@@ -12,6 +12,10 @@
   "3QYHSm": "페이스북(Facebook) 인증완료",
   "saxnj": "에어비엔비(Airbnb) 계정 인증완료",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "메세지 전송",
   "2gtpRD": "계정 잔액",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "해당 판매자에 대한 리뷰",
   "14DSHP": "해당 사용자에 대한 리뷰",
   "3tmHza": "익명 사용자",
+  "rkO8B": "Loading More...",
   "48NbPX": "더 알아보기",
   "1fBJTw": "보내기",
   "3KIuu2": "당신은 해당 목록의 상품을 구매했습니다",
@@ -671,13 +676,18 @@
   "3MWhEl": "이메일 주소 인증",
   "2s3RvZ": "하단에 오리진에서 보낸 코드를 입력해주세요.",
   "21Ou4S": "이메일 주소가 인증되었습니다!",
-  "o8stt": "페이스북(Facebook) 계정 인증",
-  "MAFIO": "다른 사용자는 당신의 페이스북(Facebook) 계정이 인증되었음을 알게되지만, 계정에 대한 세부 정보는 블록 체인에 게제되지 않습니다. 오리진은 절대 해당 정보를 블록체인에 게제하지 않습니다.",
-  "GmIoE": "페이스북(Facebook) 계정이 인증되었습니다!",
-  "1T0MVt": "구글(Google) 계정 인증",
-  "3d1Uto": "다른 사용자는 당신의 구글 계정이 인증되었음을 알게되지만, 계정에 세부 정보는 블록 체인에 게제되지 않습니다. 오리진은 절대 해당 정보를 블록체인 상에 게재하지 않습니다.",
-  "FoBDR": "구글(Google) 계정 인증완료!",
   "1ZMsNQ": "성공!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "전화 번호 인증",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "하단에 오리진에서 받은 코드를 입력해주세요.",
   "OxVwu": "인증된 전화번호!",
-  "2ocEjm": "트위터(Twitter) 계정 인증",
-  "1pJuAp": "다른 사용자는 당신의 트위터 계정이 인증되었음을 알게되지만, 계정에 세부 정보는 블록 체인에 게제되지 않습니다. 오리진은 절대 해당 정보를 블록체인 상에 게재하지 않습니다.",
-  "W5qlz": "트위터(Twitter) 계정이 인증되었습니다!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "네, 부탁드립니다",
   "1hT9ap": "제출",
   "2hXnwD": "해당 문제를 오리진 담당자에게 전달했습니다. 문제와 관련하여, 결정이 내려지면 연락을 받게 될 것입니다.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "제안 거절",
   "1xeJpw": "정말 해당 거래 제안을 거절하시겠습니까? 구매자 기금이 반환됩니다.",
   "1YzGWd": "거절",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "트위터(Twitter) 가 업데이트 되었습니다.",
   "3GeDLO": "에어비엔비(Airbnb) 가 업데이트 되었습니다.",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "오리진 프로토콜(Origin Protocol) 에 오신 것을 환영합니다.",
   "3CyhBi": "프로필 수정",
   "lJvsj": "자기소개 내용이 없는 오리진 사용자",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "에어비앤비(Airbnb)",
   "3T113q": "구글(Google)",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "지금 게시",
   "edtCZ": "{=Verifying your profile} 사용하면 다른 사용자들이 당신의 신원이 인증된 사용자라는 것을 알 수 있으며, 이를 통해 오리진에서의 거래를 성공시킬 확률이 높아집니다.",
   "3xBWtA": "프로필 본인인증",
@@ -1093,6 +1110,8 @@
   "4oX20t": "확인된 정보",
   "4Bj3zk": "이메일",
   "XtTi2": "전화",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "익명 사용자",
   "1lg0ty": "자기소개 없음"
 }
