--- a/user-activation/translations/nl_NL.json
+++ b/user-activation/translations/nl_NL.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook geverifieerd",
   "saxnj": "Airbnb-account geverifieerd",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Bericht versturen",
   "2gtpRD": "Saldo",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Recensies van deze verkoper",
   "14DSHP": "Recensies van deze gebruiker",
   "3tmHza": "Anonieme gebruiker",
+  "rkO8B": "Loading More...",
   "48NbPX": "Lees verder",
   "1fBJTw": "Sturen",
   "3KIuu2": "Je hebt een aanbieding gekocht",
@@ -671,13 +676,18 @@
   "3MWhEl": "Verifieer je e-mailadres",
   "2s3RvZ": "Voer de code in die we je hieronder hebben verzonden",
   "21Ou4S": "Email-adres geverifieërd!",
-  "o8stt": "Verifieer je Facebook-account",
-  "MAFIO": "Andere gebruikers weten dat u een geverifieerd Facebook-account heeft, maar uw accountgegevens worden niet op de blockchain gepubliceerd. We zullen nooit namens u posten.",
-  "GmIoE": "Facebook-account geverifieerd!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifieer je telefoonnummer",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Voer de code in die we je hieronder hebben verzonden",
   "OxVwu": "Telefoonnummer geverifieerd!",
-  "2ocEjm": "Verifieer je Twitter-account",
-  "1pJuAp": "Andere gebruikers weten dat u een geverifieerd Twitter-account heeft, maar uw accountgegevens worden niet op de blockchain gepubliceerd. We zullen nooit namens u posten.",
-  "W5qlz": "Twitter-account geverifieerd!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Ja, graag",
   "1hT9ap": "Indienen",
   "2hXnwD": "Je hebt dit probleem geëscaleerd naar een lid van het Origin-team. Er wordt contact met u opgenomen zodra een beslissing is genomen.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Aanbod afwijzen",
   "1xeJpw": "Weet je zeker dat je deze aanbieding wilt weigeren? Het kopersgeld wordt aan hen terugbetaald.",
   "1YzGWd": "afwijzen",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Welkom bij Origin Protocol",
   "3CyhBi": "pas je profiel aan",
   "lJvsj": "Een Origin-gebruiker zonder beschrijving",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Publiceer nu",
   "edtCZ": "{=Verifying your profile} stelt andere gebruikers in staat te weten dat u een echte persoon bent en vergroot de kans op succesvolle transacties op Origin.",
   "3xBWtA": "Verifiëren van uw profiel",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Geverifieerde informatie",
   "4Bj3zk": "E-mail",
   "XtTi2": "Telefoon",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Anonieme gebruiker",
   "1lg0ty": "Geen beschrijving"
 }
