--- a/user-activation/translations/pt_PT.json
+++ b/user-activation/translations/pt_PT.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook Verificado",
   "saxnj": "Conta do Airbnb Verificada",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Enviar mensagem",
   "2gtpRD": "Saldo da conta",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Comentários deste vendedor",
   "14DSHP": "Comentários deste usuário",
   "3tmHza": "Utilizador Sem Nome",
+  "rkO8B": "Loading More...",
   "48NbPX": "consulte Mais informação",
   "1fBJTw": "Mandar",
   "3KIuu2": "Você comprou uma listagem",
@@ -671,13 +676,18 @@
   "3MWhEl": "Verifique seu endereço de e-mail",
   "2s3RvZ": "Digite o código que lhe enviamos abaixo",
   "21Ou4S": "Endereço de Email verificado!",
-  "o8stt": "Verifique sua conta do Facebook",
-  "MAFIO": "Outros usuários saberão que você tem uma conta verificada no Facebook, mas os detalhes da sua conta não serão publicados no blockchain. Nós nunca iremos postar em seu nome.",
-  "GmIoE": "Conta do Facebook confirmada!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifique seu número de telefone",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Digite o código que lhe enviamos abaixo",
   "OxVwu": "Número de telefone confirmado!",
-  "2ocEjm": "Verifique sua conta do Twitter",
-  "1pJuAp": "Outros usuários saberão que você tem uma conta verificada no Twitter, mas os detalhes da sua conta não serão publicados no blockchain. Nós nunca iremos postar em seu nome.",
-  "W5qlz": "Conta do Twitter verificada!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Sim por favor",
   "1hT9ap": "Enviar",
   "2hXnwD": "Você escalou esse problema para um membro da equipe do Origin. Você será contatado quando uma decisão for feita.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Rejeitar Oferta",
   "1xeJpw": "Tem certeza de que deseja rejeitar esta oferta? Os fundos dos compradores serão devolvidos a eles.",
   "1YzGWd": "Rejeitar",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Bem vindo ao Protocolo de Origem",
   "3CyhBi": "Edite seu perfil",
   "lJvsj": "Um usuário Origin sem uma descrição",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Publique agora",
   "edtCZ": "{=Verifying your profile} permite que outros usuários saibam que você é uma pessoa real e aumenta as chances de transações bem-sucedidas no Origin.",
   "3xBWtA": "Verificando seu perfil",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Informação verificada",
   "4Bj3zk": "Email",
   "XtTi2": "Telefone",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Utilizador Sem Nome",
   "1lg0ty": "Nenhuma descrição"
 }
