--- a/user-activation/translations/ru_RU.json
+++ b/user-activation/translations/ru_RU.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook проверен",
   "saxnj": "Аккаунт Airbnb подтвержден",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Отправить сообщение",
   "2gtpRD": "Баланс учетной записи",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Отзывы об этом продавце",
   "14DSHP": "Отзывы этого пользователя",
   "3tmHza": "Безымянный пользователь",
+  "rkO8B": "Loading More...",
   "48NbPX": "Прочитайте больше",
   "1fBJTw": "Отправить",
   "3KIuu2": "Вы приобрели список",
@@ -671,13 +676,18 @@
   "3MWhEl": "Проверьте свой адрес электронной почты",
   "2s3RvZ": "Введите код, который мы отправили вам ниже",
   "21Ou4S": "Адрес электронной почты подтвержден!",
-  "o8stt": "Подтвердите свою учетную запись Facebook",
-  "MAFIO": "Другие пользователи будут знать, что у вас есть подтвержденная учетная запись Facebook, но данные вашей учетной записи не будут опубликованы в блокчейне. Мы никогда не будем публиковать от вашего имени.",
-  "GmIoE": "Facebook аккаунт подтвержден!",
-  "1T0MVt": "Подтвердите свою учетную запись Google",
-  "3d1Uto": "Другие пользователи будут знать, что у вас есть подтвержденная учетная запись Google, но данные вашей учетной записи не будут записаны в блокчейн. Мы никогда не будем публиковать их от вашего имени.",
-  "FoBDR": "Аккаунт Google подтвержден!",
   "1ZMsNQ": "Успех!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Проверьте свой номер телефона",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Введите код, который мы отправили вам ниже",
   "OxVwu": "Номер телефона подтвержден!",
-  "2ocEjm": "Подтвердите свою учетную запись Twitter",
-  "1pJuAp": "Другие пользователи будут знать, что у вас есть подтвержденная учетная запись Twitter, но данные вашей учетной записи не будут опубликованы в блокчейне. Мы никогда не будем публиковать от вашего имени.",
-  "W5qlz": "Аккаунт в Твиттере подтвержден!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Да",
   "1hT9ap": "Подтвердить",
   "2hXnwD": "Вы передали эту проблему члену команды Origin. С вами свяжутся, как только будет принято решение.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Отклонить предложение",
   "1xeJpw": "Вы уверены, что хотите отклонить это предложение? Средства покупателей будут им возвращены.",
   "1YzGWd": "Отклонить",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter обновлен",
   "3GeDLO": "Airbnb обновлен",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Добро пожаловать в протокол происхождения",
   "3CyhBi": "Редактировать профиль",
   "lJvsj": "Пользователь Origin без описания",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Опубликовать",
   "edtCZ": "{=Verifying your profile} позволяет другим пользователям знать, что вы являетесь реальным человеком, и увеличивает шансы на успешные транзакции в Origin.",
   "3xBWtA": "Верификация вашего профиля",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Подтвержденная информация",
   "4Bj3zk": "Адрес электронной почты",
   "XtTi2": "Телефон",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Безымянный пользователь",
   "1lg0ty": "нет описания"
 }
