--- a/user-activation/translations/th_TH.json
+++ b/user-activation/translations/th_TH.json
@@ -12,6 +12,10 @@
   "3QYHSm": "ยืนยัน Facebook แล้ว",
   "saxnj": "ยืนยันบัญชี Airbnb แล้ว",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "ส่งข้อความ",
   "2gtpRD": "ยอดเงินในบัญชี",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "รีวิวของผู้ขายนี้",
   "14DSHP": "ความคิดเห็นของผู้ใช้รายนี้",
   "3tmHza": "ผู้ใช้ที่ไม่มีชื่อ",
+  "rkO8B": "Loading More...",
   "48NbPX": "อ่านเพิ่มเติม",
   "1fBJTw": "ส่ง",
   "3KIuu2": "คุณซื้อรายชื่อ",
@@ -671,13 +676,18 @@
   "3MWhEl": "ยืนยันที่อยู่อีเมลของคุณ",
   "2s3RvZ": "ใส่รหัสที่เราส่งให้คุณด้านล่าง",
   "21Ou4S": "ยืนยันที่อยู่อีเมลแล้ว!",
-  "o8stt": "ยืนยันบัญชี Facebook ของคุณ",
-  "MAFIO": "ผู้ใช้รายอื่นจะรู้ว่าคุณมีบัญชี Facebook ที่ได้รับการยืนยันแล้ว แต่รายละเอียดบัญชีของคุณจะไม่ถูกเผยแพร่ใน blockchain เราจะไม่โพสต์ในนามของคุณ",
-  "GmIoE": "ยืนยันบัญชี Facebook แล้ว!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "ยืนยันหมายเลขโทรศัพท์ของคุณ",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "ใส่รหัสที่เราส่งให้คุณด้านล่าง",
   "OxVwu": "ยืนยันหมายเลขโทรศัพท์แล้ว!",
-  "2ocEjm": "ยืนยันบัญชี Twitter ของคุณ",
-  "1pJuAp": "ผู้ใช้รายอื่นจะรู้ว่าคุณมีบัญชี Twitter ที่ได้รับการยืนยันแล้ว แต่รายละเอียดบัญชีของคุณจะไม่ถูกเผยแพร่ใน blockchain เราจะไม่โพสต์ในนามของคุณ",
-  "W5qlz": "ยืนยันบัญชี Twitter แล้ว!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "ใช่โปรด",
   "1hT9ap": "เสนอ",
   "2hXnwD": "คุณได้ส่งต่อปัญหานี้ไปยังสมาชิกในทีม Origin คุณจะได้รับการติดต่อเมื่อมีการออกแบบ",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "ปฏิเสธข้อเสนอ",
   "1xeJpw": "คุณแน่ใจหรือว่าต้องการปฏิเสธข้อเสนอนี้ กองทุนผู้ซื้อจะถูกส่งกลับไปให้พวกเขา",
   "1YzGWd": "ปฏิเสธ",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "ยินดีต้อนรับสู่ Origin Protocol",
   "3CyhBi": "แก้ไขโปรไฟล์ของคุณ",
   "lJvsj": "ผู้ใช้ Origin โดยไม่มีคำอธิบาย",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "เผยแพร่ทันที",
   "edtCZ": "{=Verifying your profile} ทำให้ผู้ใช้รายอื่นรู้ว่าคุณเป็นคนจริงและเพิ่มโอกาสในการทำธุรกรรมที่ประสบความสำเร็จใน Origin",
   "3xBWtA": "การยืนยันโปรไฟล์ของคุณ",
@@ -1093,6 +1110,8 @@
   "4oX20t": "ข้อมูลที่ยืนยันแล้ว",
   "4Bj3zk": "อีเมล์",
   "XtTi2": "โทรศัพท์",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "ผู้ใช้ที่ไม่มีชื่อ",
   "1lg0ty": "ไม่มีคำอธิบาย"
 }
