--- a/user-activation/translations/tr_TR.json
+++ b/user-activation/translations/tr_TR.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook Doğrulandı",
   "saxnj": "Airbnb Hesabı Doğrulandı",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Mesaj gönder",
   "2gtpRD": "Hesap bakiyesi",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Bu satıcının yorumları",
   "14DSHP": "Bu kullanıcının yorumları",
   "3tmHza": "Adsız Kullanıcı",
+  "rkO8B": "Loading More...",
   "48NbPX": "Daha fazla oku",
   "1fBJTw": "göndermek",
   "3KIuu2": "Bir giriş satın aldınız",
@@ -671,13 +676,18 @@
   "3MWhEl": "Email adresinizi doğrulayın",
   "2s3RvZ": "Size gönderdiğimiz kodu aşağıya girin",
   "21Ou4S": "E-posta adresi doğrulandı!",
-  "o8stt": "Facebook Hesabınızı Doğrulayın",
-  "MAFIO": "Diğer kullanıcılar, doğrulanmış bir Facebook hesabınız olduğunu bilecek, ancak hesap bilgileriniz blok zincirinde yayınlanmayacak. Asla sizin adınıza göndermeyeceğiz.",
-  "GmIoE": "Facebook hesabı doğrulandı!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Telefon numaranızı doğrulayın",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Size gönderdiğimiz kodu aşağıya girin",
   "OxVwu": "Telefon numarası doğrulandı!",
-  "2ocEjm": "Twitter Hesabınızı Doğrulayın",
-  "1pJuAp": "Diğer kullanıcılar, doğrulanmış bir Twitter hesabınızın olduğunu bilecek, ancak hesap bilgileriniz blok zincirinde yayınlanmayacak. Asla sizin adınıza göndermeyeceğiz.",
-  "W5qlz": "Twitter hesabı doğrulandı!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Evet lütfen",
   "1hT9ap": "Gönder",
   "2hXnwD": "Bu sorunu bir Origin ekibi üyesine ilettiniz. Bir karar verildikten sonra sizinle irtibata geçilecektir.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Teklifi reddetmek",
   "1xeJpw": "Bu teklifi reddetmek istediğinize emin misiniz? Alıcı fonları onlara iade edilecektir.",
   "1YzGWd": "reddetmek",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Menşe Protokolüne Hoş Geldiniz",
   "3CyhBi": "Profilinizi düzenleyin",
   "lJvsj": "Bir açıklama olmadan bir Origin kullanıcısı",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Şimdi Yayınla",
   "edtCZ": "{=Verifying your profile} , diğer kullanıcıların sizin gerçek bir insan olduğunuzu bilmelerini sağlar ve Origin'de başarılı işlem yapma şansını artırır.",
   "3xBWtA": "Profilinizi doğrulama",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Doğrulanmış Bilgi",
   "4Bj3zk": "E-posta",
   "XtTi2": "Telefon",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Adsız Kullanıcı",
   "1lg0ty": "açıklama yok"
 }
