--- a/user-activation/translations/vi_VN.json
+++ b/user-activation/translations/vi_VN.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Đã xác minh Facebook",
   "saxnj": "Đã xác minh tài khoản Airbnb",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Gửi tin nhắn",
   "2gtpRD": "Số dư tài khoản",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Nhận xét của người bán này",
   "14DSHP": "Nhận xét của người dùng này",
   "3tmHza": "Người dùng vô danh",
+  "rkO8B": "Loading More...",
   "48NbPX": "Đọc thêm",
   "1fBJTw": "Gửi",
   "3KIuu2": "Bạn đã mua một danh sách",
@@ -671,13 +676,18 @@
   "3MWhEl": "Xác nhận địa chỉ email của bạn",
   "2s3RvZ": "Nhập mã chúng tôi đã gửi cho bạn dưới đây",
   "21Ou4S": "Địa chỉ email đã được xác minh!",
-  "o8stt": "Xác minh tài khoản Facebook của bạn",
-  "MAFIO": "Những người dùng khác sẽ biết rằng bạn có tài khoản Facebook đã được xác minh, nhưng chi tiết tài khoản của bạn sẽ không được công bố trên blockchain. Chúng tôi sẽ không bao giờ gửi thay mặt bạn.",
-  "GmIoE": "Đã xác minh tài khoản Facebook!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Xác minh số điện thoại của bạn",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Nhập mã chúng tôi đã gửi cho bạn dưới đây",
   "OxVwu": "Số điện thoại đã được xác minh!",
-  "2ocEjm": "Xác minh tài khoản Twitter của bạn",
-  "1pJuAp": "Những người dùng khác sẽ biết rằng bạn có tài khoản Twitter đã được xác minh, nhưng chi tiết tài khoản của bạn sẽ không được công bố trên blockchain. Chúng tôi sẽ không bao giờ gửi thay mặt bạn.",
-  "W5qlz": "Đã xác minh tài khoản Twitter!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Vâng, làm ơn",
   "1hT9ap": "Gửi",
   "2hXnwD": "Bạn đã leo thang vấn đề này đến một thành viên nhóm Origin. Bạn sẽ được liên lạc sau khi một mong muốn được thực hiện.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Từ chối đề nghị",
   "1xeJpw": "Bạn có chắc chắn muốn từ chối lời đề nghị này? Các quỹ người mua sẽ được trả lại cho họ.",
   "1YzGWd": "Từ chối",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Chào mừng bạn đến với Giao thức gốc",
   "3CyhBi": "Chỉnh sửa hồ sơ của bạn",
   "lJvsj": "Người dùng Origin không có mô tả",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Xuất bản ngay",
   "edtCZ": "{=Verifying your profile} cho phép người dùng khác biết rằng bạn là người thực và tăng cơ hội giao dịch thành công trên Origin.",
   "3xBWtA": "Đang xác minh hồ sơ của bạn",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Thông tin đã xác minh",
   "4Bj3zk": "Email",
   "XtTi2": "Điện thoại",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Người dùng vô danh",
   "1lg0ty": "Không có mô tả"
 }
