--- a/user-activation/translations/zh_CN.json
+++ b/user-activation/translations/zh_CN.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook已验证",
   "saxnj": "爱彼迎账号成功验证！",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "发送消息",
   "2gtpRD": "账户余额",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "卖家的评论",
   "14DSHP": "此用户的评论",
   "3tmHza": "未命名用户",
+  "rkO8B": "Loading More...",
   "48NbPX": "了解更多",
   "1fBJTw": "发送",
   "3KIuu2": "您购买了一个列表",
@@ -671,13 +676,18 @@
   "3MWhEl": "确认你的邮件地址",
   "2s3RvZ": "输入我们发送给您的代码",
   "21Ou4S": "电邮地址已验证！",
-  "o8stt": "验证您的Facebook帐户",
-  "MAFIO": "其他用户会知道您拥有经过验证的Facebook帐户，但您的帐户详细信息不会在区块链上发布。我们绝不会代您发布。",
-  "GmIoE": "Facebook帐户已验证！",
-  "1T0MVt": "验证您的Google帐户",
-  "3d1Uto": "其他用户会知道你拥有经过验证的 Google 帐户，但你的帐户的详细信息不会在区块链上发布。我们绝不会替你发布任何信息。",
-  "FoBDR": "Google 账号成功验证！",
   "1ZMsNQ": "成功!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "验证您的电话号码",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "输入我们发送给您的代码",
   "OxVwu": "电话号码已验证！",
-  "2ocEjm": "验证您的Twitter帐户",
-  "1pJuAp": "其他用户会知道您拥有经过验证的Twitter帐户，但您的帐户详细信息不会在区块链上发布。我们绝不会代您发布。",
-  "W5qlz": "Twitter帐户已验证！",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "是的，请",
   "1hT9ap": "提交",
   "2hXnwD": "您已将此问题上报给Origin团队成员。一旦做出决定，您将被联系。",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "拒绝买家的出价",
   "1xeJpw": "确定要拒绝这位买家的出价吗？买家的资金将会被退还给他。",
   "1YzGWd": "拒绝",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "推特已更新",
   "3GeDLO": "Airbnb已更新",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "欢迎来到Origin Protocol",
   "3CyhBi": "编辑您的个人资料",
   "lJvsj": "一名没有描述的起源用户",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "爱彼迎",
   "3T113q": "谷歌",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "立即发布",
   "edtCZ": "{=Verifying your profile} 允许其他用户知道您是真人并且增加了在Origin上成功交易的机会。",
   "3xBWtA": "正在认证您的个人资料",
@@ -1093,6 +1110,8 @@
   "4oX20t": "验证信息",
   "4Bj3zk": "电子邮件",
   "XtTi2": "手机",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "未命名用户",
   "1lg0ty": "没有商品描述"
 }
