--- a/user-activation/translations/zh_TW.json
+++ b/user-activation/translations/zh_TW.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook已驗證",
   "saxnj": "Airbnb賬戶已通過驗證",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "發信息",
   "2gtpRD": "帳戶結餘",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "評論此賣家",
   "14DSHP": "對這個用戶的評論",
   "3tmHza": "未命名用戶",
+  "rkO8B": "Loading More...",
   "48NbPX": "閱讀更多",
   "1fBJTw": "發送",
   "3KIuu2": "您購買了一個列表",
@@ -671,13 +676,18 @@
   "3MWhEl": "確認你的郵件地址",
   "2s3RvZ": "輸入我們發送給您的代碼",
   "21Ou4S": "電郵地址已驗證！",
-  "o8stt": "驗證您的Facebook帳戶",
-  "MAFIO": "其他用戶會知道您擁有經過驗證的Facebook帳戶，但您的帳戶詳細信息不會在區塊鏈上發布。我們絕不會代您發布。",
-  "GmIoE": "Facebook帳戶已驗證！",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "驗證您的電話號碼",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "輸入我們發送給您的代碼",
   "OxVwu": "電話號碼已驗證！",
-  "2ocEjm": "驗證您的Twitter帳戶",
-  "1pJuAp": "其他用戶會知道您擁有經過驗證的Twitter帳戶，但您的帳戶詳細信息不會在區塊鏈上發布。我們絕不會代您發布。",
-  "W5qlz": "Twitter帳戶已驗證！",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "是的，請",
   "1hT9ap": "提交",
   "2hXnwD": "您已將此問題上報給Origin團隊成員。一旦做出決定，您將被聯繫。",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "拒絕提議",
   "1xeJpw": "您確定要拒絕此優惠嗎？買家資金將退還給他們。",
   "1YzGWd": "拒絕",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "歡迎來到Origin Protocol",
   "3CyhBi": "編輯您的個人資料",
   "lJvsj": "沒有簡介的Origin用戶",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "立即發佈",
   "edtCZ": "{=Verifying your profile} 允許其他用戶知道您是真人並且增加了在Origin上成功交易的機會。",
   "3xBWtA": "核實你的個人資料",
@@ -1093,6 +1110,8 @@
   "4oX20t": "已驗証資料",
   "4Bj3zk": "電子郵件",
   "XtTi2": "電話",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "未命名用戶",
   "1lg0ty": "沒有說明"
 }
