--- a/user-activation/translations/de_DE.json
+++ b/user-activation/translations/de_DE.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook bestätigt",
   "saxnj": "Airbnb-Konto bestätigt",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Nachricht senden",
   "2gtpRD": "Kontostand",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Bewertungen dieses Verkäufers",
   "14DSHP": "Rezensionen dieses Benutzers",
   "3tmHza": "Unbenannter Benutzer",
+  "rkO8B": "Loading More...",
   "48NbPX": "Weiterlesen",
   "1fBJTw": "Senden",
   "3KIuu2": "Sie haben einen Eintrag gekauft",
@@ -671,13 +676,18 @@
   "3MWhEl": "Bestätige deine Email-Adresse",
   "2s3RvZ": "Geben Sie unten den Code ein, den wir Ihnen gesendet haben",
   "21Ou4S": "Email Adresse verifiziert!",
-  "o8stt": "Überprüfen Sie Ihr Facebook-Konto",
-  "MAFIO": "Andere Benutzer wissen, dass Sie ein verifiziertes Facebook-Konto haben, Ihre Kontodaten werden jedoch nicht in der Blockchain veröffentlicht. Wir werden niemals in Ihrem Namen posten.",
-  "GmIoE": "Facebook-Konto bestätigt!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Bestätige deine Telefonnummer",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Geben Sie unten den Code ein, den wir Ihnen gesendet haben",
   "OxVwu": "Telefonnummer verifiziert!",
-  "2ocEjm": "Überprüfen Sie Ihr Twitter-Konto",
-  "1pJuAp": "Andere Benutzer wissen, dass Sie über ein bestätigtes Twitter-Konto verfügen, Ihre Kontodaten werden jedoch nicht in der Blockchain veröffentlicht. Wir werden niemals in Ihrem Namen posten.",
-  "W5qlz": "Twitter-Konto bestätigt!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Ja, bitte",
   "1hT9ap": "Einreichen",
   "2hXnwD": "Sie haben dieses Problem an ein Origin-Teammitglied weitergeleitet. Sie werden kontaktiert, sobald eine Entscheidung getroffen wurde.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Angebot ablehnen",
   "1xeJpw": "Möchten Sie dieses Angebot wirklich ablehnen? Das Käufergeld wird an sie zurückgegeben.",
   "1YzGWd": "Ablehnen",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Willkommen beim Origin-Protokoll",
   "3CyhBi": "bearbeite dein Profil",
   "lJvsj": "Ein Origin-Benutzer ohne Beschreibung",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Jetzt veröffentlichen",
   "edtCZ": "{=Verifying your profile} ermöglicht anderen Benutzern, zu wissen, dass Sie eine echte Person sind, und erhöht die Chancen auf erfolgreiche Transaktionen in Origin.",
   "3xBWtA": "Verifizieren Sie Ihr Profil",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Verifizierte Info",
   "4Bj3zk": "E-Mail",
   "XtTi2": "Telefon",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Unbenannter Benutzer",
   "1lg0ty": "Keine Beschreibung"
 }
