--- a/user-activation/translations/ro_RO.json
+++ b/user-activation/translations/ro_RO.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook Verificat",
   "saxnj": "Contul Airbnb Verificat",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Trimite mesaj",
   "2gtpRD": "Balanța contului",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Recenzii ale acestui vânzător",
   "14DSHP": "Opinii ale acestui utilizator",
   "3tmHza": "Utilizator anonim",
+  "rkO8B": "Loading More...",
   "48NbPX": "Citeste mai mult",
   "1fBJTw": "Trimite",
   "3KIuu2": "Ați achiziționat o înregistrare",
@@ -671,13 +676,18 @@
   "3MWhEl": "Verifică-ți adresa de email",
   "2s3RvZ": "Introduceți codul pe care v-am trimis mai jos",
   "21Ou4S": "Adresa de e-mail verificată!",
-  "o8stt": "Verificați-vă contul Facebook",
-  "MAFIO": "Alți utilizatori vor ști că aveți un cont Facebook confirmat, dar detaliile contului dvs. nu vor fi publicate în blocul de blocuri. Nu vom posta niciodată în numele dvs.",
-  "GmIoE": "Contul Facebook verificat!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifică-ți numărul de telefon",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Introduceți codul pe care v-am trimis mai jos",
   "OxVwu": "Numărul de telefon verificat!",
-  "2ocEjm": "Verificați-vă contul Twitter",
-  "1pJuAp": "Alți utilizatori vor ști că aveți un cont Twitter confirmat, dar detaliile contului dvs. nu vor fi publicate în blocul de blocuri. Nu vom posta niciodată în numele dvs.",
-  "W5qlz": "Au fost verificate contul Twitter!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Da, te rog",
   "1hT9ap": "Trimite",
   "2hXnwD": "Ai escaladat această problemă unui membru al echipei de origine. Veți fi contactat odată ce ați făcut o decizie.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Refuza oferta",
   "1xeJpw": "Sigur doriți să respingeți această ofertă? Fondurile cumpărătorilor vor fi returnate acestora.",
   "1YzGWd": "Respinge",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Bun venit la Protocolul de origine",
   "3CyhBi": "Editeaza-ti profilul",
   "lJvsj": "Un utilizator Origin fără descriere",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Publicați acum",
   "edtCZ": "{=Verifying your profile} permite altor utilizatori să știe că sunteți o persoană reală și crește șansele de tranzacții de succes pe Origine.",
   "3xBWtA": "Profilul dumneavoastră este în curs de verificare",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Informaţii verificate",
   "4Bj3zk": "E-mail",
   "XtTi2": "Telefon",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Utilizator anonim",
   "1lg0ty": "fără descriere"
 }
