--- a/user-activation/translations/uk_UA.json
+++ b/user-activation/translations/uk_UA.json
@@ -12,6 +12,10 @@
   "3QYHSm": "Facebook Verified",
   "saxnj": "Рахунок Airbnb підтверджено",
   "1eyzQ1": "Website Verified",
+  "4093rT": "KaKao Verified",
+  "3Eu9eW": "GitHub Verified",
+  "1v3lDC": "LinkedIn Verified",
+  "3y7DIp": "WeChat Verified",
   "2xyXwd": "Відправити повідомлення",
   "2gtpRD": "Баланс акаунту",
   "3ZvG6A": {
@@ -167,6 +171,7 @@
   "2CZ5Pq": "Відгуки цього продавця",
   "14DSHP": "Відгуки цього користувача",
   "3tmHza": "Без імені користувача",
+  "rkO8B": "Loading More...",
   "48NbPX": "Докладніше",
   "1fBJTw": "Надіслати",
   "3KIuu2": "Ви придбали інформацію про компанію",
@@ -671,13 +676,18 @@
   "3MWhEl": "Перевірте свою адресу електронної пошти",
   "2s3RvZ": "Введіть код, який ми послали вам, нижче",
   "21Ou4S": "Адреса електронної пошти підтверджена!",
-  "o8stt": "Перевірте свій обліковий запис Facebook",
-  "MAFIO": "Інші користувачі будуть знати, що Ваш акаунт Facebook був перевірений, але деталі акаунту не будуть записані у блокчейні. Ми ніколи не будемо робити публікації від Вашого імені.",
-  "GmIoE": "Акаунт Facebook підтверджений!",
-  "1T0MVt": "Verify your Google Account",
-  "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
-  "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "16yott": "GitHub",
+  "2Et8t0": "Facebook",
+  "2Jj0L8": "Twitter",
+  "12fLzY": "Google",
+  "1b1f95": "Kakao",
+  "bUMPh": "LinkedIn",
+  "klJjd": "WeChat",
+  "2hiWEB": "Verify {provider} Account",
+  "4h9JWv": "Verify your {provider} Account",
+  "1yqhXg": "Other users will know that you have a verified {provider} account, but your account details will not be published on the blockchain. We will never post on your behalf.",
+  "3pH2Vy": "{provider} account verified!",
   "PqBCY": "Verify Phone Number",
   "1iXhvu": "Перевірте свій номер телефону",
   "11AuN2": "Enter a valid 10-digit phone number",
@@ -687,9 +697,6 @@
   "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Введіть код, який ми послали вам, нижче",
   "OxVwu": "Телефонний номер підтверджено!",
-  "2ocEjm": "Перевірте свій обліковий запис Twitter",
-  "1pJuAp": "Інші користувачі знатимуть, що у вас є підтверджений обліковий запис Twitter, але реквізити вашого облікового запису не будуть опубліковані в блоці. Ми ніколи не розміщуватимемо повідомлення від вашого імені.",
-  "W5qlz": "Аккаунт Twitter підтверджений!",
   "3fLVs6": "Verify your website",
   "vyn8P": "Enter your website URL below",
   "feV59": "Other users will know that you have a verified website and your user id will be published on the blockchain.",
@@ -987,6 +994,10 @@
   "SkTuH": "Так, будь ласка",
   "1hT9ap": "Підтвердити",
   "2hXnwD": "Ви розширили цю проблему до члена команди Origin. З вами зв'яжуться після того, як буде прийнято рішення.",
+  "1S92c3": "Are you sure you want to release the funds?",
+  "4gA4BW": "If you don't want to do this, cancel and either report a problem or contact the seller with your concerns.",
+  "32sJoO": "No, wait...",
+  "lZrH7": "Yes, please",
   "4ptppT": "Відхилити пропозицію",
   "1xeJpw": "Дійсно відхилити цю пропозицію? Кошти покупців будуть повернуті їм.",
   "1YzGWd": "Відхилити",
@@ -1061,6 +1072,9 @@
   "2c9Imw": "Twitter updated",
   "3GeDLO": "Airbnb updated",
   "RHx7E": "Website updated",
+  "1CbeBg": "KaKao updated",
+  "4wPj9O": "GitHub updated",
+  "4xHZvg": "LinkedIn updated",
   "2vXA73": "Ласкаво просимо до протоколу походження",
   "3CyhBi": "Відредагуйте свій профіль",
   "lJvsj": "Користувач Origin без опису",
@@ -1073,6 +1087,9 @@
   "3d9Oik": "Airbnb",
   "3T113q": "Google",
   "44jmLa": "Website",
+  "7dRuq": "KaKao",
+  "36QlHV": "GitHub",
+  "1vP9i6": "LinkedIn",
   "3blg9A": "Опубліковати зараз",
   "edtCZ": "{=Verifying your profile} дозволяє іншим користувачам знати, що ви реальна особа і збільшуєте шанси на успішні транзакції на Origin.",
   "3xBWtA": "Перевірка Вашого профілю",
@@ -1093,6 +1110,8 @@
   "4oX20t": "Підтвердити Інформацію",
   "4Bj3zk": "Адреса електронної пошти",
   "XtTi2": "Телефон",
+  "1KdXak": "AirBnb",
+  "2gvpZ8": "Website",
   "2nX44i": "Без імені користувача",
   "1lg0ty": "без опису"
 }
